optimize endpoint with validators and get grade and percent
